# mkshot-z

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  TODO  TODO.md  conanfile.py  meson.build  meson_options.txt  mkshot.json  mkshot.json5
.github/workflows/: autobuild.yml
binding/: audio-binding.cpp  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  etc-binding.cpp  filesystem-binding.cpp  font-binding.cpp  graphics-binding.cpp  http-binding.cpp  input-binding.cpp  meson.build  miniffi-binding.cpp  plane-binding.cpp  sprite-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  window-binding.cpp  windowvx-binding.cpp
cmake/: EmbedAssets.cmake
embed/: CMakeLists.txt
embed/assets/: gamecontrollerdb.txt
embed/shaders/: bicubic.frag  bitmap-blit.frag  blur-h.vert  blur-v.vert  blur.frag  common.hpp  flash-map.frag  flat-color.frag  gray.frag  hue.frag  lanczos3.frag  minimal.vert  obscured.frag  plane.frag  simple-alpha-uni.frag  simple-alpha.frag  simple-color.frag  simple-color.vert  simple-matrix.vert  simple.frag  simple.vert  sprite.frag  sprite.vert  tilemap-vx.vert  tilemap.frag  tilemap.vert  trans-simple.frag  trans.frag  xbrz.frag
linux/: Makefile
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  meson.build  sharedstate.cpp  sharedstate.h
src/audio/: aldatasource.h  alstream.cpp  audio.cpp  audio.h
src/binding/: audio.cpp  binding.hpp  bitmap.cpp  cusl.cpp  disposable.hpp  etc.cpp  flashable.hpp  font.cpp  fs.cpp  gfx.cpp  http.cpp  input.cpp  miniffi.cpp  module-rgss1.rb.xxd  module-rgss2.rb.xxd  module-rgss3.rb.xxd  mri-win32.hpp  mri.cpp  plane.cpp  rb_audio.cpp  rb_bitmap.cpp  rb_disposable.hpp  rb_etc.cpp  rb_flashable.hpp  rb_font.cpp  rb_fs.cpp  rb_gfx.cpp  rb_input.cpp  rb_plane.cpp  rb_serializable.hpp  rb_sprite.cpp  rb_steam.cpp  rb_table.cpp  rb_tilemap-vx.cpp  rb_tilemap.cpp  rb_util.cpp  rb_util.hpp  rb_viewport.cpp  rb_viewport.hpp  rb_window-vx.cpp  (+16 more)
src/binding/oneshot/: journal.cpp  niko.cpp  oneshot.cpp  rb_journal.cpp  rb_oneshot.cpp  rb_wallpaper.cpp  wallpaper.cpp
src/core/: config.cpp  config.hpp  event-thread.cpp  event-thread.hpp  settings-menu.cpp  settings-menu.hpp  shared-state.cpp  shared-state.hpp
src/core/audio/: al-stream.cpp  al-stream.hpp  al-util.hpp  aldata-source.hpp  audio.cpp  audio.hpp  sdl-sound-source.cpp  sdl_sound-source.cpp  sound-emitter.cpp  sound-emitter.hpp  stream.cpp  stream.hpp  vorbis-source.cpp
src/core/bind/: bind-audio.cpp  bind-bitmap.cpp  bind-disposable.hpp  bind-etc.cpp  bind-flashable.hpp  bind-font.cpp  bind-fs.cpp  bind-gfx.cpp  bind-http.cpp  bind-input.cpp  bind-plane.cpp  bind-rgss.cpp  bind-scene.hpp  bind-serializable.hpp  bind-sprite.cpp  bind-steam.cpp  bind-table.cpp  bind-tilemap-vx.cpp  bind-tilemap.cpp  bind-types.hpp  bind-util.cpp  bind-util.hpp  bind-viewport.cpp  bind-viewport.hpp  bind-window-vx.cpp  bind-window.cpp  bind.cpp  bind.hpp
src/core/etc/: etc-internal.hpp  etc.cpp  etc.hpp  table.cpp  table.hpp
src/core/fs/: fs-impl-apple.mm  fs-impl.cpp  fs-impl.hpp  fs.cpp  fs.hpp
src/core/fs/plat/: mac-fs.mm
src/core/gfx/: bitmap.cpp  bitmap.hpp  etc-internal.hpp  flashable.hpp  font.cpp  font.hpp  gfx.cpp  gfx.hpp  gl-debug.cpp  gl-debug.hpp  gl-fun.cpp  gl-fun.hpp  gl-meta.cpp  gl-meta.hpp  gl-quad-array.hpp  gl-quad.hpp  gl-scene.cpp  gl-scene.hpp  gl-shader.cpp  gl-shader.hpp  gl-state.cpp  gl-state.hpp  gl-texpool.cpp  gl-texpool.hpp  gl-tileatlas-vx.cpp  gl-tileatlas-vx.hpp  gl-tileatlas.cpp  gl-tileatlas.hpp  gl-tilequad.cpp  gl-tilequad.hpp  gl-transform.hpp  gl-util.hpp  gl-vertex.cpp  gl-vertex.hpp  global-ibo.hpp  plane.cpp  plane.hpp  sprite.cpp  sprite.hpp  thing.sh  (+11 more)
src/core/gfx/gl/: debug.cpp  debug.hpp  fun.cpp  fun.hpp  meta.cpp  meta.hpp  quad-array.hpp  quad.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp  texpool.cpp  texpool.hpp  tileatlas-vx.cpp  tileatlas-vx.hpp  tileatlas.cpp  tileatlas.hpp  tilequad.cpp  tilequad.hpp  transform.hpp  util.hpp  vertex.cpp  vertex.hpp
src/core/http/: http.cpp  http.hpp
src/core/input/: input.cpp  input.hpp  keybinds.cpp  keybinds.hpp
src/core/net/: net.cpp  net.hpp
src/core/oneshot/: apple.h  apple.mm  gnome-fun.cpp  gnome-fun.hpp  i18n.cpp  i18n.hpp  journal.cpp  journal.hpp  oneshot-apple.h  oneshot-apple.mm  oneshot.cpp  oneshot.hpp  wallpaper.cpp  wallpaper.hpp  xfconf-fun.cpp  xfconf-fun.hpp
src/core/oneshot/linux/: gtk.cpp  xdg-user-dirs.cpp  xfconf.cpp  xfconf.hpp
src/core/oneshot/mac/: oneshot.mm
src/core/rgssad/: rgssad.cpp  rgssad.hpp
src/core/steam/: steam.cpp  steam.hpp
src/core/sys/: sys-apple.mm  sys-impl-apple.mm  sys-impl.cpp  sys.cpp  sys.hpp
src/core/sys/plat/: mac-sys.mm
src/core/theoraplay/: play.c
src/oneshot/: i18n.cpp  i18n.hpp  journal.cpp  journal.hpp  oneshot.cpp  oneshot.hpp  wallpaper.cpp  wallpaper.hpp
src/oneshot/bind/: bind-journal.cpp  bind-niko.cpp  bind-oneshot.cpp  bind-wallpaper.cpp
src/oneshot/plat/: linux-gtk.cpp  linux-xdg-user-dirs.hpp  linux-xfconf.cpp  linux-xfconf.hpp  mac-oneshot.mm
src/util/: CRC.hpp  boost-hash.hpp  dbg-writer.hpp  disposable.hpp  encoding.hpp  exception.hpp  ini-config.cpp  ini-config.hpp  intru-list.hpp  json5pp.hpp  sdl.hpp  serial.hpp  serializable.hpp  string.hpp  util.hpp  win-console.cpp  win-console.hpp  xdg-user-dirs.hpp
src/util/plat/: win-console.cpp
src/util/win/: console.hpp
steamshim/: steamshim_mac_helpers.h  steamshim_mac_helpers.mm  steamshim_parent.cpp
windows/: Makefile
