option(
    'static',
    type: 'boolean',
    value: true,
    description: 'Whether link static or shared libraries against an executable'
)

option(
    'force_32bit',
    type: 'boolean',
    value: false,
    description: 'Force compiler to build in 32-bit mode instead'
)

option(
    'workdir_current',
    type: 'boolean',
    value: false,
    description: 'Keep Current Working Directory on startup'
)

option(
    'gl_backend',
    type: 'combo',
    choices: ['gl', 'gles'],
    value: 'gl',
    description: 'Whether use OpenGL or OpenGL ES'
)

option(
    'require_nanosleep',
    type: 'combo',
    choices: ['auto', 'true', 'false'],
    value: 'auto',
    description: 'Whether use nanosleep for ticking framerate. Affects to framerate steadiness on Windows.'
)

option(
    'appimagetool',
    type: 'string',
    value: '',
    description: 'Path to AppImageTool binary. Providing will pack to AppImage file on install'
)

# ModShot modules options
option(
    'cjk_font',
    type: 'boolean',
    value: false,
    description: 'Use WenQuanYi Micro Hei as the fallback font'
)

option(
    'fluidsynth',
    type: 'boolean',
    value: false,
    description: 'Enable FluidSynth (MIDI support)'
)

option(
    'miniffi',
    type: 'boolean',
    value: false,
    description: 'Enable MiniFFI Ruby bindings (Win32API)'
)

option(
    'cxx11_experimental',
    type: 'boolean',
    value: false,
    description: 'Toggles between using ghc/filesystem or C++11 <experimental/filesystem>'
)

# Steamworks and Steamshim options
option(
    'steamworks_sdk',
    type: 'string',
    value: '',
    description: 'Path to Steamworks SDK. Providing will enable Steam features and bindings'
)

option(
    'steam_appid',
    type: 'string',
    value: '',
    description: 'Steam AppID value. Set this to use SteamAPI_RestartAppIfNecessary'
)

option(
    'steamshim_debug',
    type: 'boolean',
    value: false,
    description: 'Whether to show Steamshim debug output console'
)
